--- a/css/grid.css
+++ b/css/grid.css
@@ -9,7 +9,7 @@
 .grid_2 { width: 15%; }/*150px*/
 .grid_3 { width: 23.5%; }/*235px*/
 .grid_4 { width: 32%; overflow-y: scroll; max-height: 800px;}/*320px*/
-.grid_5 { width: 40.5%; }/*405px*/
+.grid_5 { width: 43.5%; }/*405px*/
 .grid_6 { width: 49%; }/*490px*/
 .grid_7 { width: 57.5%;}/*575px*/
 .grid_8 { width: 66%; }/*660px*/
@@ -30,10 +30,12 @@
 .grid_10,
 .grid_11,
 .grid_12 {
-	margin: 0 2% 1% 2%;
-	padding-right: 2%;
+	margin: 0 0.5% 0.5% 0.5%;
+	padding-right: 1%;
 	float: left;
 	display: block;
+	border-style: solid;
+	border-color: transparent;
 }
 
 .alpha{margin-left:0px;}
@@ -45,6 +47,31 @@
 	margin: auto;
 }
 
+.search_member
+{
+
+
+	margin-right: auto;
+	margin-left: auto;
+}
+
+@media (max-width: 768px) {
+  .grid_1,
+.grid_2,
+.grid_3,
+.grid_4,
+.grid_5,
+.grid_6,
+.grid_7,
+.grid_8,
+.grid_9,
+.grid_10,
+.grid_11,
+.grid_12 
+
+ {
+    width: 100%;
+  }
 
 
 .clear{clear:both;display:block;overflow:hidden;visibility:hidden;width:0;height:0}.clearfix:after{clear:both;content:' ';display:block;font-size:0;line-height:0;visibility:hidden;width:0;height:0}* html .clearfix,*:first-child+html .clearfix{zoom:1}
