--- a/css/grid.css
+++ b/css/grid.css
@@ -6,6 +6,7 @@
 
  */
 .grid_1 { width: 6.5%;}/*65px*/
+.grid_1a{ width: 13.2%;}
 .grid_2 { width: 15%; }/*150px*/
 .grid_3 { width: 23.5%; }/*235px*/
 .grid_4 { width: 32%; overflow-y: scroll; max-height: 800px;}/*320px*/
@@ -19,6 +20,7 @@
 .grid_12 { width: 100%; }
 
 .grid_1,
+.grid_1a,
 .grid_2,
 .grid_3,
 .grid_4,
@@ -31,12 +33,13 @@
 .grid_11,
 .grid_12 {
 	margin: 0 0.5% 0.5% 0.5%;
-	padding-right: 1%;
+	padding-right: 0.3%;
 	float: left;
 	display: block;
 	border-style: solid;
 	border-color: transparent;
 }
+
 
 .alpha{margin-left:0px;}
 .omega{margin-right:0px;}
@@ -57,6 +60,7 @@
 
 @media (max-width: 768px) {
   .grid_1,
+  .grid_1a,
 .grid_2,
 .grid_3,
 .grid_4,
