--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -5819,7 +5819,7 @@ button.close {
   position: relative;
   background-color: #F4F39E;
   border-color: #DEE184;
-  text-align: center;
+  text-align: left;
   margin: 1em 0px;
   padding: 1.5em 1em;
   -webkit-box-shadow: 0px 1px 3px rgba(0,0,0,0.25);
