--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -4656,6 +4656,9 @@ a.thumbnail.active {
 .list-group-item > .badge + .badge {
   margin-right: 5px;
 }
+p.list-group-item {
+  color: #555;
+}
 a.list-group-item {
   color: #555;
 }
@@ -4666,6 +4669,14 @@ a.list-group-item:hover,
 a.list-group-item:focus {
   text-decoration: none;
   background-color: #f5f5f5;
+}
+p.list-group-item.active,
+p.list-group-item.active:hover,
+p.list-group-item.active:focus {
+  z-index: 2;
+  color: #fff;
+  background-color: #888A8B;
+  border-color: #888A8B;
 }
 a.list-group-item.active,
 a.list-group-item.active:hover,
