--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -2065,6 +2065,12 @@ fieldset[disabled] .btn {
   background-color: #fff;
   border-color: #ccc;
 }
+.btn-default_1 {
+  float: right;
+  color: #333;
+  background-color: #fff;
+  border-color: #ccc;
+}
 .btn-schema {
   color: #333;
   background-color: #fff;
