--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -6284,3 +6284,20 @@ position:relative;
   margin: 50px;
   height: 50px;
 }
+
+
+
+
+.installt{
+  
+
+  float: right;
+  z-index: -100px;
+    width: 300px;
+    height: 100px;
+    color:red;
+    background-color: transparent;
+    -ms-transform: rotate(-9deg); /* IE 9 */
+    -webkit-transform: rotate(-9deg); /* Chrome, Safari, Opera */
+    transform: rotate(-9deg);
+  }
